--- a/character-breakdown.html
+++ b/character-breakdown.html
@@ -11,13 +11,13 @@
         <h1>Character Breakdown & Design</h1>
         <a href="dashboard.html" class="back-btn">← Back to Dashboard</a>
 
-        <!-- ✅ Main Content Grid -->
-        <div class="main-content">
-            <!-- ✅ Left Panel: Character Profiles & Digital Face Chart -->
+        <!-- ✅ Main Grid Layout -->
+        <div class="main-layout">
+            <!-- ✅ Left Side: Character Profiles & Digital Face Chart -->
             <div class="left-panel">
                 <div class="character-section">
                     <h2>Character Profiles</h2>
-                    <form id="character-form" class="character-form">
+                    <form id="character-form">
                         <input type="text" id="character-name" placeholder="Character Name">
                         <input type="text" id="actor-name" placeholder="Actor Name">
                         <input type="number" id="character-age" placeholder="Age">
@@ -31,25 +31,20 @@
                 </div>
 
                 <!-- 🎭 Digital Face Chart (Now Separate) -->
-                <div class="character-section digital-face-chart" id="digital-face-chart">
+                <div class="character-section digital-face-chart">
                     <h2>🎭 Digital Face Chart</h2>
                     <div class="face-chart-container">
-                        <!-- 📌 Left Panel: Upload & Saved Looks -->
                         <div class="face-chart-left">
                             <h3>📸 Upload Headshot</h3>
                             <input type="file" id="uploadHeadshot" accept="image/*">
                             <div id="headshotPreview" class="headshot-placeholder">No Image Uploaded</div>
-                            <h3>🎭 Saved Looks</h3>
-                            <div id="savedLooks" class="saved-looks-grid"></div>
                         </div>
 
-                        <!-- 🎨 Center: Editable Face Chart -->
                         <div class="face-chart-center">
                             <canvas id="faceCanvas"></canvas>
                             <p>Use AI tools to apply makeup & hair changes.</p>
                         </div>
 
-                        <!-- 🎨 Right Panel: Makeup & Hair Tools -->
                         <div class="face-chart-right">
                             <h3>🎨 Makeup & Hair Tools</h3>
                             <button class="tool-btn" id="foundationTool">💄 Foundation</button>
@@ -60,7 +55,6 @@
                         </div>
                     </div>
 
-                    <!-- 🎬 Scene Assignments -->
                     <div class="scene-assignments">
                         <h3>🎬 Assign Look to Scene</h3>
                         <input type="text" id="sceneName" placeholder="Scene Name">
@@ -69,7 +63,7 @@
                 </div>
             </div>
 
-            <!-- ✅ Right Panel: Film Color Palette -->
+            <!-- ✅ Right Side: Film Color Palette -->
             <div class="right-panel">
                 <div class="character-section film-color-palette">
                     <h2>🎨 Film Color Palette</h2>
@@ -84,35 +78,32 @@
                     </div>
                 </div>
             </div>
-        </div> <!-- ✅ Closes main-content -->
+        </div> <!-- ✅ Closes main-layout -->
 
-        <!-- ✅ Moodboards, Notes & Lookbooks (No Overlap Now) -->
-        <div class="character-extras-container">
+        <!-- ✅ Moodboards, Notes & Lookbooks -->
+        <div class="extras-container">
             <div class="character-section">
                 <h2>Moodboards</h2>
-                <div class="moodboard-upload" onclick="document.getElementById('moodboard-input').click()">Drag & Drop Images Here</div>
+                <div class="moodboard-upload">Drag & Drop Images Here</div>
                 <input type="file" id="moodboard-input" accept="image/*" multiple style="display: none;">
-                <div class="moodboard-grid" id="moodboard-grid"></div>
             </div>
 
             <div class="character-section">
                 <h2>📝 Character Notes</h2>
                 <textarea id="characterNotes" placeholder="Write your notes here..." rows="5"></textarea>
                 <button id="saveNotes">Save Notes</button>
-                <p id="notesMessage" style="color: green; display: none;">✅ Notes saved!</p>
             </div>
 
             <div class="character-section">
                 <h2>Lookbooks</h2>
-                <div class="lookbook-grid" id="lookbook-grid"></div>
+                <div id="lookbook-grid"></div>
             </div>
-        </div> <!-- ✅ Closes character-extras-container -->
+        </div> <!-- ✅ Closes extras-container -->
 
     </div> <!-- ✅ Closes character-breakdown-container -->
 
-    <!-- ✅ JavaScript Files -->
     <script src="assets/js/character-breakdown.js"></script>
     <script src="assets/js/filmColorPalette.js"></script>
-    <script src="assets/js/digitalFaceChart.js"></script> <!-- ✅ JS for Face Chart -->
+    <script src="assets/js/digitalFaceChart.js"></script>
 </body>
 </html>
